--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to Radweb Starter Kit
+    Welcome to Radweb Starter Kit - supports ofline
   </h1>
 </div>
 <div class="table-responsive">
