--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+  <button mat-button class="sidenav-toggle" (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span class="toolbar-title">{{currentTitle()}}</span>
+  <button mat-flat-button color="primary" (click)="signIn()">{{signInText()}}</button>
+</mat-toolbar>
 <mat-sidenav-container class="app-sidenav-container">
   <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10 no-print" [opened]="!dialog.isScreenSmall()" [mode]="dialog.isScreenSmall()?'over':'side'">
     <div style="width:100%;text-align: center">
@@ -12,26 +19,16 @@
 
 
       </ng-container>
-      <mat-list-item *ngIf="auth.auth.info">
-        <a matLine (click)="signOut()">Sign Out</a>
-      </mat-list-item>
     </mat-nav-list>
 
   </mat-sidenav>
-  <mat-toolbar color="primary" class="no-print">
-    <button mat-button class="sidenav-toggle" (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>{{currentTitle()}}</span>
-
-  </mat-toolbar>
-
   <div class="app-sidenav-content ">
 
 
     <div class="wrapper">
-      <router-outlet></router-outlet>
-      <div class="footer"></div>
+      <mat-card>
+        <router-outlet></router-outlet>
+      </mat-card>
     </div>
 
   </div>
