--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <div style="width:100%;text-align: center">
       
     </div>
-    <h4 *ngIf="auth.auth.info">Hello {{auth.auth.info.name}}</h4>
+    <h4 *ngIf="context.isLoggedIn()">Hello {{context.user.name}}</h4>
     <mat-nav-list role="list">
       <ng-container *ngFor="let m of router.config">
         <mat-list-item *ngIf="shouldDisplayRoute(m)" routerLinkActive="active-route">
