more server cleanup

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <data-grid2 [settings]="users" height="300"></data-grid2>
   <div class="col-md-12" *ngIf="users.currentRow">
-    <div *ngIf="context.info.superAdmin">
+    <div *ngIf="isAdmin()">
       <mat-checkbox [(ngModel)]="users.currentRow.admin.value">{{users.currentRow.admin.caption}}</mat-checkbox>
     </div>
   </div>
